...

                            Slider(value: $settingsManager.fontSize, in: 32...(UIDevice.current.userInterfaceIdiom == .phone ? 128 : 256), step: 2)
                                .padding(.horizontal)

                            HStack {
                                Toggle(isOn: $settingsManager.isDarkMode) {
                                    Text("Dark Mode")
                                        .foregroundColor(settingsManager.isDarkMode ? .white : .black)
                                        .animation(.easeInOut(duration: 0.3), value: settingsManager.isDarkMode)
                                }
                                .padding(.horizontal)
                                Spacer()
                            }
...
                                }
                                .padding(.horizontal)
                                Spacer()
                            }

                            HStack(alignment: .center) {
                                Text("Custom Name:")
                                    .foregroundColor(settingsManager.isDarkMode ? .white : .black)
                                    .animation(.easeInOut(duration: 0.3), value: settingsManager.isDarkMode)
                                TextField("Your name?", text: $settingsManager.customName)
                                    .font(.system(size: 24))
                                    .padding()
                                    .background(settingsManager.isDarkMode ? Color.gray.opacity(0.2) : Color.white)
...
