...
                }
                .frame(maxWidth: geometry.size.width, maxHeight: geometry.size.height)
                .background(settingsManager.isDarkMode ? Color.black : Color.white)
                .overlay(alignment: .bottom) {
                    HStack {
                        NavigationLink(destination: SettingsView(settingsManager: settingsManager)) {
                            Image(systemName: "gear")
                                .resizable()
                                .aspectRatio(contentMode: .fit)
                                .frame(width: 30, height: 30)
                                .foregroundColor(settingsManager.isDarkMode ? .white : .black)
                        }
                        Spacer()
...
